[package]
name = "mrm-explorer-image-processing"
version = "0.1.0"
authors = ["Simon Wiles <simon.wiles@stanford.edu>"]
edition = "2024"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
image = { version = "0.23.14", default-features = false, features = ["jpeg", "png"] }
wasm-bindgen = "0.2.73"


[profile.release]
opt-level = "s"
